# rosworkspace

devel/: .catkin  .rosinstall  setup.sh
devel/lib/agitr/: hello
devel/lib/pkgconfig/: agitr.pc  beginner_tutorials.pc  tutorial2.pc
devel/share/agitr/cmake/: agitrConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/tutorial2/cmake/: tutorial2Config.cmake
src/agitr/: CMakeLists.txt  hello.cpp  package.xml
src/testpackage/: mainpage.dox  manifest.xml
src/tutorial2/: CMakeLists.txt
