<?xml  version ="1.0"?>

<package>

<name>agitr</name>

<version >0.0.1</version>

<description>

Examples from A Gentle  Introduction  to ROS

</description>

<maintainer email="test@vt.edu">

</maintainer>

<license>todo</license>

<buildtool_depend>catkin </buildtool_depend>

<build_depend>roscpp</build_depend>

<run_depend>roscpp</run_depend>

<build_depend>turtlesim </build_depend>

<run_depend>turtlesim </run_depend>

</package>
